fix gmethod gettTransaction
